--- a/pages/contact/style.css
+++ b/pages/contact/style.css
@@ -11,6 +11,7 @@ body{
 }
 .contact-bg{
     height: 40vh;
+    padding-top: 2vmax;
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.8)), url(image/contact-bg.jpg);
     background-position: 50% 100%;
     background-repeat: no-repeat;
