--- a/style/style.css
+++ b/style/style.css
@@ -11,6 +11,7 @@ html {
   min-height: 100vh;
   width: 100%;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 #page-1 {
   height: 100vh;
@@ -201,7 +202,8 @@ html {
   display: flex;
   gap: 2vmax;
 }
-.btns button {
+.btns button,
+#page-8 button {
   height: 3.3vmax;
   width: 12vmax;
   background: hsla(33, 100%, 53%, 1);
@@ -226,23 +228,28 @@ html {
 
 #page-2 {
   height: 75vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: url(https://images.unsplash.com/photo-1501523460185-2aa5d2a0f981?q=80&w=1531&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
+#page-2 section {
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 5vmax;
-  justify-content: center;
-  background: hsla(33, 100%, 53%, 1);
-  background: linear-gradient(
-    180deg,
-    rgb(255, 189, 108) 0%,
-    rgb(245, 237, 81) 100%
-  );
 }
 #page-2 h1 {
   font-size: 5vmax;
   font-weight: 500;
   line-height: 1;
+  color: #ffff;
 }
 .boxs {
   display: flex;
@@ -295,13 +302,20 @@ html {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  gap: 1.5vmax;
+
   color: #fff;
   background: url(https://images.unsplash.com/photo-1474674556023-efef886fa147?q=80&w=1470&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+}
+#page-3 section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 1.5vmax;
 }
 #page-3 h1 {
   font-size: 5vmax;
@@ -346,13 +360,13 @@ html {
   filter: brightness(50%);
 }
 #page-4 {
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 5vmax;
-  padding: 2vmax 0;
+  padding: 5vmax 0;
   position: relative;
 }
 .head h1 {
@@ -366,7 +380,12 @@ html {
   align-items: center;
   gap: 10vmax;
 }
-.p-box {
+.p-boxs a {
+  text-decoration: none;
+  color: #000;
+}
+.p-boxL,
+.p-boxR {
   padding: 1vmax;
   display: flex;
   justify-content: center;
@@ -381,14 +400,17 @@ html {
   transition: transform 0.4s;
   cursor: pointer;
 }
-.p-box:hover {
+.p-boxL:hover,
+.p-boxR:hover {
   transform: translateY(-25px);
-  box-shadow: 10px 10px 25px rgba(123, 0, 255, 0.4);
+  box-shadow: 10px 10px 25px rgba(255, 166, 0, 0.4);
 }
-.p-box img {
+.p-boxL img,
+.p-boxR img {
   height: 20vmax;
 }
-.p-box span {
+.p-boxL span,
+.p-boxR span {
   font-size: 1.6vmax;
   text-align: center;
   font-weight: 500;
@@ -412,28 +434,41 @@ html {
   align-items: center;
   justify-content: center;
 }
-.s-img {
+.s-img,
+.s-img2,
+.s-img3,
+.s-img4 {
   height: 80vh;
   width: 30vmax;
   object-fit: cover;
   border-radius: 15px;
 }
-.text {
+.text,
+.text2,
+.text3,
+.text4 {
   display: flex;
   flex-direction: column;
   gap: 1vmax;
-
   width: 50%;
 }
-.text h1 {
+.text,
+.text2,
+.text3,
+.text4 h1 {
   font-size: 3vmax;
 }
-.text p {
+.text,
+.text2,
+.text3,
+.text4 p {
   text-align: justify;
 
   font-size: 1.2vmax;
 }
-.text button {
+.text button,
+.text2 button,
+.text3 button {
   width: 10vmax;
   height: 2.5vmax;
   border: none;
@@ -541,28 +576,27 @@ footer .con {
   gap: 1vmax;
   color: #000;
 }
+#page-8 {
+  background-color: #070f2b;
+  overflow: hidden;
+}
+#page-8 section {
+  width: 100%;
 
-.d-down {
   display: flex;
   flex-direction: column;
-  position: absolute;
-  z-index: 999;
-  background-color: #e23634;
-  height: 0;
-  overflow: hidden;
-  transition: all 0.4s;
-  width: 10vmax;
-  gap: 1vmax;
-  /* height: 4vmax; */
-
+  align-items: center;
+  color: #fff;
+  padding: 2vmax 0;
+  gap: 2vmax;
 }
-#page-1 nav ul li:hover .d-down{
-  height: 4vmax;
-  padding: 1vmax 0;
-}
-.d-down a{
+#page-8 h1 {
+  text-transform: uppercase;
+  font-size: 4vmax;
   line-height: 1;
-  font-size: 0.8vmax;
-  font-weight: 400;
+}
+#page-8 p {
+  width: 70%;
+  font-size: 1.3vmax;
   text-align: center;
 }
