--- a/style/style.css
+++ b/style/style.css
@@ -17,7 +17,7 @@ html {
   height: 100vh;
   width: 100%;
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 #slider {
   height: 100%;
@@ -369,16 +369,13 @@ html {
   padding: 5vmax 0;
   position: relative;
 }
-.head h1 {
-  background-color: aquamarine;
-  padding: 0.5vmax 2vmax;
-  border-radius: 2vmax;
-}
+
 .p-boxs {
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 10vmax;
+  flex-wrap: wrap;
 }
 .p-boxs a {
   text-decoration: none;
@@ -430,9 +427,9 @@ html {
 .s-page section {
   display: flex;
   gap: 2vmax;
-  padding: 0 5vmax;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
 }
 .s-img,
 .s-img2,
@@ -463,7 +460,6 @@ html {
 .text3,
 .text4 p {
   text-align: justify;
-
   font-size: 1.2vmax;
 }
 .text button,
@@ -599,4 +595,92 @@ footer .con {
   width: 70%;
   font-size: 1.3vmax;
   text-align: center;
+}
+
+.menu-icon {
+  display: none;
+  cursor: pointer;
+  font-size: 3vmax;
+  padding: 5px;
+  z-index: 99999;
+  color: #fff;
+}
+.act {
+  transform: translateX(100%);
+  display: none;
+}
+.menu {
+  position: absolute;
+  background-color: #03091d;
+  width: 100%;
+  padding: 3vmax 0;
+  justify-content: center;
+  align-items: center;
+  z-index: 99;
+  left: -100%;
+  transition: all 0.5s;
+}
+.m-nav ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2vmax;
+}
+.m-nav ul li {
+  list-style: none;
+}
+.m-nav ul li a {
+  color: #fff;
+  font-size: 3vmax;
+  text-decoration: none;
+}
+@media (width<600px) {
+  #page-1 nav {
+    display: none;
+  }
+  #page-1 {
+    height: 60vh;
+  }
+  #page-1 h1 {
+    font-size: 2vmax;
+  }
+  #hero section h1 {
+    font-size: 4.6vmax;
+  }
+  #hero span {
+    font-size: 1.2vmax;
+  }
+  #page-3 h1 {
+    text-align: center;
+  }
+  .s-img,
+  .s-img2,
+  .s-img3,
+  .s-img4 {
+    height: 40vh;
+  }
+  .text,
+  .text2,
+  .text3,
+  .text4 {
+    width: 80%;
+  }
+  #sec-2 {
+    flex-direction: column-reverse;
+  }
+  footer {
+    flex-direction: column;
+  }
+  footer section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .menu-icon {
+    display: flex;
+  }
+  .act {
+    display: flex;
+  }
 }
