--- a/style/product.css
+++ b/style/product.css
@@ -11,6 +11,7 @@ html {
   min-height: 100vh;
   width: 100%;
   box-sizing: border-box;
+  background-color: #FFFBDA;
 }
 #page-1{
   display: flex;
