--- a/style/footer.css
+++ b/style/footer.css
@@ -3,12 +3,7 @@ footer {
   display: flex;
   justify-content: space-evenly;
   height: 40vh;
-  background: hsla(33, 100%, 53%, 1);
-  background: linear-gradient(
-    90deg,
-    hsla(33, 100%, 53%, 1) 0%,
-    hsla(58, 100%, 68%, 1) 100%
-  );
+ background-color: #04051d;
   align-items: center;
   /* padding: 0 10vmax; */
 }
@@ -22,7 +17,7 @@ footer nav ul {
   }
   footer nav ul li a {
     text-decoration: none;
-    color: #000;
+    color: #ffff;
     font-size: 1vmax;
     font-weight: 600;
   }
@@ -31,17 +26,17 @@ footer nav ul {
   }
   footer .logo h1 {
     text-align: center;
-    color: #000;
+    color: #fff;
     font-size: 3vmax;
   }
   .icons {
     display: flex;
     font-size: 1.6vmax;
     gap: 2vmax;
-    color: #000;
+    color: #fff;
   }
   .icons a {
-    color: #000;
+    color: #fff;
     transition: all 0.5s;
   }
   .icons a:hover {
@@ -51,7 +46,7 @@ footer nav ul {
     display: flex;
     flex-direction: column;
     gap: 1vmax;
-    color: #000;
+    color: #ffff;
   }
   
 
