--- a/style/header.css
+++ b/style/header.css
@@ -1,129 +1,134 @@
-
 .header {
-    height: 6vmax;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 5vmax;
-    background-color: rgba(0, 0, 0, 1);
-
-  }
-  #logo img {
-    height: 4.2vmax;
-  }
+  height: 6vmax;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 5vmax;
+  background-color: #04051d;
+  position: sticky;
+  top: 0;
+  z-index: 9;
+}
+#logo img {
+  height: 4.2vmax;
+}
 .header nav {
-    display: flex;
-    align-items: center;
-    gap: 2vmax;
-  }
+  display: flex;
+  align-items: center;
+  gap: 2vmax;
+}
 .header nav ul {
-    display: flex;
-    gap: 2vmax;
-  }
+  display: flex;
+  gap: 2vmax;
+}
 .header nav ul li {
-    list-style: none;
-    font-size: 1.2vmax;
-    font-weight: 500;
-  }
+  list-style: none;
+  font-size: 1.2vmax;
+  font-weight: 500;
+}
 .nav {
-    text-decoration: none;
-    color: #ffff;
-    transition: 0.4s;
-    position: relative;
-  }
-  
+  text-decoration: none;
+  color: #ffff;
+  transition: 0.4s;
+  position: relative;
+}
+
 .nav:hover {
-    color: #fcdc2a;
-  }
-  .active {
-    color: #fcdc2a;
-    position: relative;
-  }
-  .active::after {
-    content: "";
-    height: 3px;
-    position: absolute;
-    width: 100%;
-    background-color: #fcdc2a;
-    left: 1px;
-    bottom: 0;
-    line-height: 0;
-  }
-  
-  #srch {
-    height: 2.5vmax;
-    background-color: #ffff;
-    display: flex;
-    align-items: center;
-    border-radius: 2.5vmax;
-    overflow: hidden;
-  }
-  #srch input {
-    height: 100%;
-    outline: none;
-    width: 15vmax;
-    font-size: 1.2vmax;
-    border: none;
-    padding-left: 15px;
-    background: transparent;
-  }
-  .s-icon {
-    width: 3.5vmax;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 1.5vmax;
-    background-color: #fcdc2a;
-    height: 100%;
-    cursor: pointer;
+  color: #fcdc2a;
+}
+.active {
+  color: #fcdc2a;
+  position: relative;
+}
+.active::after {
+  content: "";
+  height: 3px;
+  position: absolute;
+  width: 100%;
+  background-color: #fcdc2a;
+  left: 1px;
+  bottom: 0;
+  line-height: 0;
+}
+
+#srch {
+  height: 2.5vmax;
+  background-color: #ffff;
+  display: flex;
+  align-items: center;
+  border-radius: 2.5vmax;
+  overflow: hidden;
+}
+#srch input {
+  height: 100%;
+  outline: none;
+  width: 15vmax;
+  font-size: 1.2vmax;
+  border: none;
+  padding-left: 15px;
+  background: transparent;
+}
+.s-icon {
+  width: 3.5vmax;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5vmax;
+  background-color: #fcdc2a;
+  height: 100%;
+  cursor: pointer;
+}
+.menu-icon {
+  display: none;
+  cursor: pointer;
+  font-size: 3vmax;
+  padding: 5px;
+  z-index: 999;
+  color: #fff;
+}
+.act {
+  transform: translateX(100%);
+  display: none;
+}
+.menu {
+  position: absolute;
+  background-color: #03091d;
+  width: 100%;
+  padding: 3vmax 0;
+  justify-content: center;
+  align-items: center;
+  z-index: 99;
+  left: -100%;
+  transition: all 0.5s;
+  top:6vmax;
+}
+.m-nav ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2vmax;
+}
+.m-nav ul li {
+  list-style: none;
+}
+.m-nav ul li a {
+  color: #fff;
+  font-size: 3vmax;
+  text-decoration: none;
+}
+
+@media (width<600px) {
+  .header nav {
+    display: none;
   }
   .menu-icon {
-    display: none;
-    cursor: pointer;
-    font-size: 3vmax;
-    padding: 5px;
-    z-index: 99999;
-    color: #fff;
+    display: flex;
   }
   .act {
-    transform: translateX(100%);
-    display: none;
-  }
-  .menu {
-    position: absolute;
-    background-color: #03091d;
-    width: 100%;
-    padding: 3vmax 0;
-    justify-content: center;
-    align-items: center;
-    z-index: 99;
-    left: -100%;
-    transition: all 0.5s;
-  }
-  .m-nav ul {
     display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 2vmax;
   }
-  .m-nav ul li {
-    list-style: none;
+  .header{
+    padding: 0 2vmax;
   }
-  .m-nav ul li a {
-    color: #fff;
-    font-size: 3vmax;
-    text-decoration: none;
-  }
-  
-  @media (width<600px) {
-    .header nav{
-      display: none;
-    }
-    .menu-icon {
-      display: flex;
-    }
-    .act {
-      display: flex;
-    }
-  }
+}
