--- a/style/style.css
+++ b/style/style.css
@@ -8,7 +8,7 @@ html {
   scroll-behavior: smooth;
 }
 #main {
-  min-height: 100vh;
+  /* min-height: 100vh; */
   width: 100%;
   box-sizing: border-box;
   overflow-x: hidden;
@@ -57,85 +57,6 @@ html {
   object-fit: cover;
   filter: brightness(50%);
 }
-#page-1 header {
-  height: 6vmax;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 5vmax;
-  background-color: rgba(0, 0, 0, 0.3);
-}
-#logo img {
-  height: 4.2vmax;
-}
-#page-1 nav {
-  display: flex;
-  align-items: center;
-  gap: 2vmax;
-}
-#page-1 nav ul {
-  display: flex;
-  gap: 2vmax;
-}
-#page-1 nav ul li {
-  list-style: none;
-  font-size: 1.2vmax;
-  font-weight: 500;
-  position: relative;
-}
-.nav {
-  text-decoration: none;
-  color: #ffff;
-  transition: 0.4s;
-  position: relative;
-}
-
-.nav:hover {
-  color: #fcdc2a;
-}
-.active {
-  color: #fcdc2a;
-  position: relative;
-}
-.active::after {
-  content: "";
-  height: 3px;
-  position: absolute;
-  width: 100%;
-  background-color: #fcdc2a;
-  left: 1px;
-  bottom: 0;
-  line-height: 0;
-}
-
-#srch {
-  height: 2.5vmax;
-  background-color: #ffff;
-  display: flex;
-  align-items: center;
-  border-radius: 2.5vmax;
-  overflow: hidden;
-}
-#srch input {
-  height: 100%;
-  outline: none;
-  width: 15vmax;
-  font-size: 1.2vmax;
-  border: none;
-  padding-left: 15px;
-  background: transparent;
-}
-.s-icon {
-  width: 3.5vmax;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.5vmax;
-  background-color: #fcdc2a;
-  height: 100%;
-  cursor: pointer;
-}
-
 #ani p {
   font-size: 2.5vmax;
   position: absolute;
@@ -517,61 +438,6 @@ html {
   flex-direction: column;
 }
 
-footer {
-  display: flex;
-  justify-content: space-evenly;
-  height: 40vh;
-  background: hsla(33, 100%, 53%, 1);
-  background: linear-gradient(
-    90deg,
-    hsla(33, 100%, 53%, 1) 0%,
-    hsla(58, 100%, 68%, 1) 100%
-  );
-  align-items: center;
-  /* padding: 0 10vmax; */
-}
-
-footer nav ul {
-  display: flex;
-  flex-direction: column;
-}
-footer nav ul li {
-  list-style: none;
-  transition: all 0.5s;
-}
-footer nav ul li a {
-  text-decoration: none;
-  color: #000;
-  font-size: 1vmax;
-  font-weight: 600;
-}
-footer nav ul li:hover {
-  transform: translateX(10px);
-}
-footer .logo h1 {
-  text-align: center;
-  color: #000;
-  font-size: 3vmax;
-}
-.icons {
-  display: flex;
-  font-size: 1.6vmax;
-  gap: 2vmax;
-  color: #000;
-}
-.icons a {
-  color: #000;
-  transition: all 0.5s;
-}
-.icons a:hover {
-  color: #e23634;
-}
-footer .con {
-  display: flex;
-  flex-direction: column;
-  gap: 1vmax;
-  color: #000;
-}
 #page-8 {
   background-color: #070f2b;
   overflow: hidden;
@@ -597,48 +463,8 @@ footer .con {
   text-align: center;
 }
 
-.menu-icon {
-  display: none;
-  cursor: pointer;
-  font-size: 3vmax;
-  padding: 5px;
-  z-index: 99999;
-  color: #fff;
-}
-.act {
-  transform: translateX(100%);
-  display: none;
-}
-.menu {
-  position: absolute;
-  background-color: #03091d;
-  width: 100%;
-  padding: 3vmax 0;
-  justify-content: center;
-  align-items: center;
-  z-index: 99;
-  left: -100%;
-  transition: all 0.5s;
-}
-.m-nav ul {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  gap: 2vmax;
-}
-.m-nav ul li {
-  list-style: none;
-}
-.m-nav ul li a {
-  color: #fff;
-  font-size: 3vmax;
-  text-decoration: none;
-}
+
 @media (width<600px) {
-  #page-1 nav {
-    display: none;
-  }
   #page-1 {
     height: 60vh;
   }
