--- a/style/footer.css
+++ b/style/footer.css
@@ -3,7 +3,9 @@ footer {
   display: flex;
   justify-content: space-evenly;
   height: 40vh;
- background-color: #04051d;
+  background: hsla(266, 91%, 14%, 1);
+
+  background: linear-gradient(90deg, hsla(266, 91%, 14%, 1) 0%, hsla(219, 100%, 18%, 1) 100%);
   align-items: center;
   /* padding: 0 10vmax; */
 }
@@ -58,5 +60,11 @@ footer nav ul {
       display: flex;
       flex-direction: column;
       align-items: center;
+    }
+    footer nav ul{
+      align-items:center ;
+    }
+    .con{
+      font-size: 1.3vmax;
     }
   }
