--- a/style/header.css
+++ b/style/header.css
@@ -4,7 +4,9 @@
   justify-content: space-between;
   align-items: center;
   padding: 0 5vmax;
-  background-color: #04051d;
+  background: hsla(266, 91%, 14%, 1);
+
+background: linear-gradient(90deg, hsla(266, 91%, 14%, 1) 0%, hsla(219, 100%, 18%, 1) 100%);
   position: sticky;
   top: 0;
   z-index: 9;
@@ -91,7 +93,7 @@
   display: none;
 }
 .menu {
-  position: absolute;
+  position: fixed;
   background-color: #03091d;
   width: 100%;
   padding: 3vmax 0;
