--- a/style/product.css
+++ b/style/product.css
@@ -50,8 +50,64 @@ html {
   text-align: justify;
   font-size: 1.2vmax;
 }
+#page-2{
+  width: 100%;
+  padding: 2vmax 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2vmax;
+  margin-bottom: 2vmax;
+}
+#page-2 h1{
+  font-size: 3vmax;
+  height: 1;
+  font-weight: 500;
+}
+#page-2 a{
+  text-decoration: none;
+  color: black;
+}
+#page-2 section span{
+  font-size: 1.4vmax;
+  font-weight: 500;
+  
+}
 
-
+.p-box{
+  padding: 1vmax;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: hsla(33, 100%, 53%, 1);
+  background: linear-gradient(
+    180deg,
+    hsla(33, 100%, 53%, 1) 0%,
+    hsla(58, 100%, 68%, 1) 100%
+  );
+  border-radius: 15px;
+  width: 15vmax;
+  gap: 1vmax;
+  transition: transform 0.3s;
+  cursor: pointer;
+}
+.p-box span{
+  font-weight: 500;
+  font-size: 1.3vmax;
+  text-align: center;
+}
+.p-box img{
+  object-fit: cover;
+  background-color: #FFFBDA;
+  width: 100%;
+  border-radius: 10px;
+}
+.p-box:hover{
+  transform: translateY(-15px);
+  box-shadow: 10px 10px 25px rgba(255, 166, 0, 0.4);
+}
 @media (width<600px) {
   #page-1{
     flex-direction: column;
