--- a/style/style.css
+++ b/style/style.css
@@ -19,6 +19,131 @@ html {
   position: relative;
   overflow: hidden;
 }
+.header.sticky{
+  position: fixed;
+  background-color: #070f2b;
+}
+.header {
+  height: 6vmax;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding:  0 5vmax;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 9;
+  width: calc(100% - 10vmax);
+  transition: all 0.5s;
+}
+#logo img {
+  height: 4.2vmax;
+}
+.header nav {
+  display: flex;
+  align-items: center;
+  gap: 2vmax;
+}
+.header nav ul {
+  display: flex;
+  gap: 2vmax;
+}
+.header nav ul li {
+  list-style: none;
+  font-size: 1.2vmax;
+  font-weight: 500;
+}
+.nav {
+  text-decoration: none;
+  color: #ffff;
+  transition: 0.4s;
+  position: relative;
+}
+
+.nav:hover {
+  color: #fcdc2a;
+}
+.active {
+  color: #fcdc2a;
+  position: relative;
+}
+.active::after {
+  content: "";
+  height: 3px;
+  position: absolute;
+  width: 100%;
+  background-color: #fcdc2a;
+  left: 1px;
+  bottom: 0;
+  line-height: 0;
+}
+
+#srch {
+  height: 2.5vmax;
+  background-color: #ffff;
+  display: flex;
+  align-items: center;
+  border-radius: 2.5vmax;
+  overflow: hidden;
+}
+#srch input {
+  height: 100%;
+  outline: none;
+  width: 15vmax;
+  font-size: 1.2vmax;
+  border: none;
+  padding-left: 15px;
+  background: transparent;
+}
+.s-icon {
+  width: 3.5vmax;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5vmax;
+  background-color: #fcdc2a;
+  height: 100%;
+  cursor: pointer;
+}
+.menu-icon {
+  display: none;
+  cursor: pointer;
+  font-size: 3vmax;
+  padding: 5px;
+  z-index: 999;
+  color: #fff;
+}
+.act {
+  transform: translateX(100%);
+  display: none;
+}
+.menu {
+  position: fixed;
+  background-color: #03091d;
+  width: 100%;
+  padding: 3vmax 0;
+  justify-content: center;
+  align-items: center;
+  z-index: 99;
+  left: -100%;
+  transition: all 0.5s;
+  top: 6vmax;
+}
+.m-nav ul {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  gap: 2vmax;
+}
+.m-nav ul li {
+  list-style: none;
+}
+.m-nav ul li a {
+  color: #fff;
+  font-size: 3vmax;
+  text-decoration: none;
+}
+
 #slider {
   height: 100%;
   min-width: 100%;
@@ -96,7 +221,7 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: calc(100% - 6vmax);
+  height: 100%;
   flex-direction: column;
   color: #ffff;
   gap: 1vmax;
@@ -309,11 +434,16 @@ html {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  background-color: #fff;
-  border: 5px solid yellow;
+  background: hsla(33, 100%, 53%, 1);
+  background: linear-gradient(
+    180deg,
+    hsla(33, 100%, 53%, 1) 0%,
+    hsla(58, 100%, 68%, 1) 100%
+  );
+
   border-radius: 15px;
-  height: 30vmax;
-  width: 25vmax;
+
+  width: 23vmax;
   gap: 1vmax;
   transition: transform 0.4s;
   cursor: pointer;
@@ -323,9 +453,17 @@ html {
   transform: translateY(-25px);
   box-shadow: 10px 10px 25px rgba(255, 166, 0, 0.4);
 }
+.img {
+  width: 100%;
+  background-color: #fff;
+  padding: 3vmax 0;
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+}
 .p-boxL img,
 .p-boxR img {
-  height: 20vmax;
+  height: 15vmax;
 }
 .p-boxL span,
 .p-boxR span {
@@ -424,7 +562,7 @@ html {
   background-size: cover;
   color: #fff;
   background-attachment: fixed;
-  gap: 2vmax;
+  gap: 5vmax;
 }
 
 #page-7 {
@@ -463,13 +601,25 @@ html {
   text-align: center;
 }
 
-
 @media (width<600px) {
   #page-1 {
     height: 60vh;
   }
   #page-1 h1 {
     font-size: 2vmax;
+  }
+  .header nav {
+    display: none;
+  }
+  .menu-icon {
+    display: flex;
+  }
+  .act {
+    display: flex;
+  }
+  .header {
+    padding: 0 2vmax;
+    width: calc(100% - 4vmax);
   }
   #hero section h1 {
     font-size: 4.6vmax;
