--- a/style/header.css
+++ b/style/header.css
@@ -59,7 +59,7 @@ background: linear-gradient(90deg, hsla(266, 91%, 14%, 1) 0%, hsla(219, 100%, 18
   display: flex;
   align-items: center;
   border-radius: 2.5vmax;
-  overflow: hidden;
+  position: relative;
 }
 #srch input {
   height: 100%;
@@ -78,6 +78,32 @@ background: linear-gradient(90deg, hsla(266, 91%, 14%, 1) 0%, hsla(219, 100%, 18
   font-size: 1.5vmax;
   background-color: #fcdc2a;
   height: 100%;
+  cursor: pointer;
+  border-radius:  0 10px 10px 0;
+}
+
+.result{
+  position: absolute;
+  top: 2.5vmax;
+  background-color: #fff;
+  width: 100%;
+  border-radius: 10px;
+}
+.result ul{
+  padding: 1vmax 0;
+  display: flex;
+  flex-direction: column;
+}
+.result ul a{
+  text-decoration: none;
+  color: black;
+}
+.result ul li{
+  padding: 0 2vmax;
+  text-align: center;
+}
+.result ul li:hover{
+  background-color: #c0c0c0;
   cursor: pointer;
 }
 .menu-icon {
