--- a/style/style.css
+++ b/style/style.css
@@ -83,7 +83,7 @@ html {
   display: flex;
   align-items: center;
   border-radius: 2.5vmax;
-  overflow: hidden;
+  position: relative;
 }
 #srch input {
   height: 100%;
@@ -102,6 +102,31 @@ html {
   font-size: 1.5vmax;
   background-color: #fcdc2a;
   height: 100%;
+  cursor: pointer;
+  border-radius:  0 10px 10px 0;
+}
+.result{
+  position: absolute;
+  top: 2.5vmax;
+  background-color: #fff;
+  width: 100%;
+  border-radius: 10px;
+}
+.result ul{
+  padding: 1vmax 0;
+  display: flex;
+  flex-direction: column;
+}
+.result ul a{
+  text-decoration: none;
+  color: black;
+}
+.result ul li{
+  padding: 0 2vmax;
+  text-align: center;
+}
+.result ul li:hover{
+  background-color: #c0c0c0;
   cursor: pointer;
 }
 .menu-icon {
@@ -135,6 +160,7 @@ html {
   flex-direction: column;
   gap: 2vmax;
 }
+
 .m-nav ul li {
   list-style: none;
 }
@@ -600,6 +626,10 @@ html {
   font-size: 1.3vmax;
   text-align: center;
 }
+
+
+
+
 
 @media (width<600px) {
   #page-1 {
