--- a/style/about.css
+++ b/style/about.css
@@ -14,6 +14,9 @@
 #page-1 {
   min-height: 100vh;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   overflow-x: hidden;
 }
 
@@ -55,6 +58,35 @@
   font-style: italic;
   font-weight: 500;
 }
+#page-2{
+  min-height: 100vh;
+  width: 100%;
+}
+#page-2 h1{
+  font-size: 5vmax;
+  text-align: center;
+}
+#page-2 section{
+  padding: 5vmax 10vmax;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 5vmax;
+  justify-content: center;
+  align-items: center;
+}
+#page-2 img{
+  height: 110vh;
+  box-shadow: 3px 3px 15px rgba(0, 0, 0, 0.3);
+}
+#pro-text h1{
+  font-size: 3vmax;
+  font-weight: 500;
+}
+#pro-text p{
+  text-align: justify;
+  font-size: 1.5vmax;
+  font-weight: 400;
+}
 @media (width<600px) {
   .con{
     flex-direction: column;
@@ -62,5 +94,12 @@
   }
   .right img{
     height: 40vh;
+  }
+  #page-2{
+    padding: 5vmax 0;
+  }
+  #page-2 img{
+    width: 90vw;
+    height: 100%;
   }
 }
